cabal-version: 3.0
name: github-workflows
version: 0.1.0.0
synopsis: Utility to manage GitHub workflows for a user
license: MIT
license-file: LICENSE
author: Neil Mayhew
maintainer: neil@mayhew.name
copyright: 2024

flag werror
  description: Use -Werror
  default: False

common language
  default-language: Haskell2010

common warnings
  ghc-options:
    -Wall
    -Wcompat
    -Wredundant-constraints
    -Wunused-packages

  if flag(werror)
    ghc-options:
      -Werror

common rts
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

executable github-workflows
  import: warnings, language, rts
  main-is: github-workflows.hs
  build-depends:
    aeson,
    base,
    bytestring,
    http-conduit >=2.3.8,
    microlens >=0.4.14,
    microlens-aeson,
    optparse-applicative >=0.18.0,
    prettyprinter,
    terminal-size,
    text,
    time,
    yaml,
